change scrolling issues on mobile

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -36,6 +36,11 @@ h2 {
     font-family: -apple-system, system-ui, BlinkMacSystemFont, "segoe ui", Helvetica, Arial, sans-serif, "apple color emoji", "segoe ui emoji", "segoe ui symbol";
 }
 
+*::selection {
+    color: #1A1A1A;
+    background: var(--theme);
+}
+
 
 @media (min-width: 768px) {
     .container {
